testdata/typechecker/error/BinopTest-err7.java
int main() {
            boolean b;
            b = 283 < false; // TE
		return 0;
}

